--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,8 @@ alembic>=1.8.0       # Migraciones DB
 stable-baselines3>=2.0.0  # PPO para RL
 gym>=0.21.0          # Entorno para RL
 gymnasium>=0.29.0    # Entorno RL moderno (compatible con gym)
+scikit-learn>=1.3.0  # Machine Learning (LogisticRegression, etc.)
+joblib>=1.3.0        # Paralelización para ML
 
 # Análisis Técnico
 ta-lib>=0.4.0        # Indicadores técnicos (RSI, MACD, Bollinger, etc.)
