--- a/core/ml/training/night_train/night_plan.yaml
+++ b/core/ml/training/night_train/night_plan.yaml
@@ -5,25 +5,26 @@ horizons: [1, 3, 5]            # velas a futuro para la etiqueta
 
 # Ventanas / validación temporal
 days_back: 365                 # histórico máximo a usar
-n_splits: 5                    # nº de ventanas walk-forward
-embargo_minutes: 60            # “gap” entre train y valid
+n_splits: 6                    # nº de ventanas walk-forward (aumentado)
+embargo_minutes: 30            # "gap" entre train y valid (reducido)
 
 # Modelo base (pipeline: StandardScaler + LogisticRegression)
 model:
   kind: logreg
   param_grid:
-    C: [0.1, 0.5, 1.0, 2.0]    # grid pequeño para ir rápido
-    class_weight: ["balanced"]
-  max_iter: 2000
+    C: [0.5, 1.0, 2.0]         # grid optimizado
+    class_weight: [null, "balanced"]  # prueba con y sin balanceo
+    solver: ["lbfgs", "saga"]   # múltiples solvers para convergencia
+  max_iter: 3000               # más iteraciones para convergencia
 
 # Requisitos mínimos
 min_rows: 5000                 # descarta combos con pocos datos
-dropna_cols_min_fraction: 0.98 # si falta >2% en alguna columna, la quitamos
+dropna_cols_min_fraction: 0.95 # si falta >5% en alguna columna, la quitamos
 
 # Política de promoción (para marcar AgentVersions.promoted=true)
 promote_if:
   min_auc: 0.53
-  max_brier: 0.251
+  max_brier: 0.25              # ligeramente más estricto
 
 # Guardado de artefactos
 artifacts_dir: artifacts/direction
