Monitor: refresh 5s, order by recent; Backtests: fix max_dd, add random windows; Event-driven: cast types for inserts; Scorer: jsonb cast fix; Feature engineer: full-history repair + chunks; Miner: full_history; Config: YAML thresholds and settings

--- a/config/backtest/backtest.yaml
+++ b/config/backtest/backtest.yaml
@@ -4,7 +4,11 @@ vectorized:
   slippage_bps: 1.0
   funding_apr: 0.05
   warmup_bars: 300
-  max_bars: 100000
+  random_windows:
+    enabled: true
+    n: 8
+    min_days: 3
+    max_days: 7
 
 event_driven:
   fees_bps: 3.0
