--- a/config/train/training.yaml
+++ b/config/train/training.yaml
@@ -98,12 +98,17 @@ supervised_training:
 
 ppo_execution:
   # Política RL para la cabeza de ejecución (micro-timing)
+  enable: true
   env:
     action_space:
       discrete_actions: ["open_long","open_short","hold","close"]
       continuous_heads:
         limit_offset_bp: true     # basis points del límite (+/-)
         max_offset_bp: 25
+    observation_space:
+      features: ["close", "atr_14"]
+      lookback_steps: 60
+      normalization: zscore
     episode:
       max_steps: 1024
       max_position_bars: 300
@@ -134,6 +139,8 @@ ppo_execution:
     parallel_envs: 4
     eval_every_episodes: 50
     save_every_episodes: 200
+  training:
+    total_timesteps: 100000
 
 evaluation:
   metrics:
